--- a/index.html
+++ b/index.html
@@ -5,27 +5,37 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Font Awesome -->
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- Google Fonts -->
-
-        <title>Document</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
+        <title>Spatiflati</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
+    
     <body>
-        <header>
+        <!-- Header -->
+        <header class="pad20">
             <button></button>
         </header>
+        <!-- /Header -->
         <div class="page-container flex">
-            <nav>
+            <!-- Navbar -->
+            <nav class="pad20">
                 
             </nav>
-
-            <main>
+            <!-- /Navbar -->
+            <!-- Main -->
+            <main class="pad20">
 
             </main>
+            <!-- /Main -->
         </div>
+        <!-- Footer Player -->
         <footer>
 
         </footer>
+        <!-- /Footer Player -->
     </body>
 </html>
