--- a/index.html
+++ b/index.html
@@ -10,24 +10,57 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
         <title>Spatiflati</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
-    
+
     <body>
         <!-- Header -->
-        <header class="pad20">
-            <button></button>
+        <header class=>
+            <button class="mar20">Effettua l'upgrade</button>
         </header>
         <!-- /Header -->
         <div class="page-container flex">
             <!-- Navbar -->
-            <nav class="pad20">
-                
+            <nav>
+                <div class="logo mar20">
+                    <img src="img/logo.svg" alt="logo">
+                    <img class="hidden" src="img/logo-small.svg" alt="logo">
+                </div>
+                <div class="radios flex-column">
+                    <div>
+                        <input type="radio" id="home" name="section">
+                        <label for="home"><i class="fa-solid fa-house"></i><span>Home</span></label>
+                    </div>
+                    <div>
+                        <input type="radio" id="cerca" name="section">
+                        <label for="cerca"><i class="fa-solid fa-magnifying-glass"></i><span>Cerca</span></label>
+                    </div>
+                    <div>
+                        <input type="radio" id="libreria" name="section">
+                        <label for="libreria"><i class="fa-solid fa-book-open"></i><span>La tua libreria</span></label>
+                    </div>
+                </div>
+                <div class="playlist flex-column mar20">
+                    <h4>Playlist</h4>
+                    <ul>
+                        <li><i class="fa-solid fa-plus"></i><span>Crea Playlist</span></li>
+                        <li><span>Nome Playlist</span></li>
+                        <li><span>Nome Playlist</span></li>
+                        <li><span>Nome Playlist</span></li>
+                        <li><span>Nome Playlist</span></li>
+                        <li><span>Nome Playlist</span></li>
+                        <li><span>Nome Playlist</span></li>
+                        <li><span>Nome Playlist</span></li>
+                        <li><span>Nome Playlist</span></li>
+                    </ul>
+
+                </div>
             </nav>
             <!-- /Navbar -->
             <!-- Main -->
-            <main class="pad20">
+            <main>
 
             </main>
             <!-- /Main -->
