radio input nav

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <!-- Radio Buttons -->
                     <div class="radios">
                         <div>
-                            <input type="radio" id="home" name="section">
+                            <input type="radio" id="home" name="section" checked>
                             <label for="home"><img src="img/home.svg" alt="home"><span>Home</span></label>
                         </div>
                         <div>
