--- a/index.html
+++ b/index.html
@@ -76,7 +76,43 @@
             <!-- /Navbar -->
             <!-- Main -->
             <main>
+                <div class="container-radios pad20">
+                    <div class="flex-wrap justify-center">
+                        <div>
+                            <input type="radio" id="evidenza" name="music" checked>
+                            <label for="evidenza">in evidenza</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="podcast" name="music" checked>
+                            <label for="podcast">podcast</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="classifiche" name="music" checked>
+                            <label for="classifiche">classifiche</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="generi" name="music" checked>
+                            <label for="generi">generi e mood</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="nuoveuscite" name="music" checked>
+                            <label for="nuoveuscite">nuove uscite</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="scopri" name="music" checked>
+                            <label for="scopri">scopri</label>
+                        </div>
+                    </div>
+                </div>
+                <section id="recent pad20">
+                    <h2>Recently Played</h2>
+                </section>
+                <section id="for-john">
 
+                </section>
+                <section id="popular">
+
+                </section>
             </main>
             <!-- /Main -->
         </div>
