--- a/index.html
+++ b/index.html
@@ -104,13 +104,57 @@
                         </div>
                     </div>
                 </div>
-                <section id="recent pad20">
+                <section id="recent" class="pad20">
                     <h2>Recently Played</h2>
+                    <div class="flex-wrap">
+                        <div class="col">
+                            <img src="img/metal_lifting.jpg" alt="metal">
+                            <div class="img-text">
+                                <a href=""><h3>Heavy Metal</h3></a>
+                                <a href=""><span>Subtitle</span></a>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <a href=""><img src="img/metal_lifting.jpg" alt="metal"></a>
+                            <div class="img-text">
+                                <a href=""><h3>Heavy Metal</h3></a>
+                                <a href=""><span>Subtitle</span></a>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <a href=""><img src="img/metal_lifting.jpg" alt="metal"></a>
+                            <div class="img-text">
+                                <a href=""><h3>Heavy Metal</h3></a>
+                                <a href=""><span>Subtitle</span></a>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <a href=""><img src="img/metal_lifting.jpg" alt="metal"></a>
+                            <div class="img-text">
+                                <a href=""><h3>Heavy Metal</h3></a>
+                                <a href=""><span>Subtitle</span></a>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <a href=""><img src="img/metal_lifting.jpg" alt="metal"></a>
+                            <div class="img-text">
+                                <a href=""><h3>Heavy Metal</h3></a>
+                                <a href=""><span>Subtitle</span></a>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <a href=""><img src="img/metal_lifting.jpg" alt="metal"></a>
+                            <div class="img-text">
+                                <a href=""><h3>Heavy Metal</h3></a>
+                                <a href=""><span>Subtitle</span></a>
+                            </div>
+                        </div>
+                    </div>
                 </section>
-                <section id="for-john">
+                <section id="for-john" class="pad20">
 
                 </section>
-                <section id="popular">
+                <section id="popular" class="pad20">
 
                 </section>
             </main>
