--- a/index.html
+++ b/index.html
@@ -80,82 +80,130 @@
                     <div class="flex-wrap justify-center">
                         <div>
                             <input type="radio" id="evidenza" name="music" checked>
-                            <label for="evidenza">in evidenza</label>
+                            <label for="evidenza">
+                                in evidenza
+                                <div class="green-check"></div>
+                            </label>
                         </div>
                         <div>
-                            <input type="radio" id="podcast" name="music" checked>
-                            <label for="podcast">podcast</label>
+                            <input type="radio" id="podcast" name="music">
+                            <label for="podcast">
+                                podcast
+                                <div class="green-check"></div>
+                            </label>
                         </div>
                         <div>
-                            <input type="radio" id="classifiche" name="music" checked>
-                            <label for="classifiche">classifiche</label>
+                            <input type="radio" id="classifiche" name="music">
+                            <label for="classifiche">
+                                classifiche
+                                <div class="green-check"></div>
+                            </label>
                         </div>
                         <div>
-                            <input type="radio" id="generi" name="music" checked>
-                            <label for="generi">generi e mood</label>
+                            <input type="radio" id="generi" name="music">
+                            <label for="generi">
+                                generi e mood
+                                <div class="green-check"></div>
+                            </label>
                         </div>
                         <div>
-                            <input type="radio" id="nuoveuscite" name="music" checked>
-                            <label for="nuoveuscite">nuove uscite</label>
+                            <input type="radio" id="nuoveuscite" name="music">
+                            <label for="nuoveuscite">
+                                nuove uscite
+                                <div class="green-check"></div>
+                            </label>
                         </div>
                         <div>
-                            <input type="radio" id="scopri" name="music" checked>
-                            <label for="scopri">scopri</label>
+                            <input type="radio" id="scopri" name="music">
+                            <label for="scopri">
+                                scopri
+                                <div class="green-check"></div>
+                            </label>
                         </div>
                     </div>
                 </div>
                 <section id="recent" class="pad20">
-                    <h2>Recently Played</h2>
+                    <h2 class="mbot20">Recently Played</h2>
                     <div class="flex-wrap">
                         <div class="col">
                             <img src="img/metal_lifting.jpg" alt="metal">
                             <div class="img-text">
-                                <a href=""><h3>Heavy Metal</h3></a>
+                                <a href=""><h4>Heavy Metal</h4></a>
                                 <a href=""><span>Subtitle</span></a>
                             </div>
                         </div>
                         <div class="col">
-                            <a href=""><img src="img/metal_lifting.jpg" alt="metal"></a>
+                            <img src="img/stranger.jpeg" alt="stranger things">
                             <div class="img-text">
-                                <a href=""><h3>Heavy Metal</h3></a>
+                                <a href=""><h4>Stranger Things, Vol. 1(a Netflix Original Series Soundtrack)</h4></a>
                                 <a href=""><span>Subtitle</span></a>
                             </div>
                         </div>
                         <div class="col">
-                            <a href=""><img src="img/metal_lifting.jpg" alt="metal"></a>
+                            <img src="img/aquietplace.jpeg" alt="a quiet place">
                             <div class="img-text">
-                                <a href=""><h3>Heavy Metal</h3></a>
+                                <a href=""><h4>A quiet place</h4></a>
                                 <a href=""><span>Subtitle</span></a>
                             </div>
                         </div>
                         <div class="col">
-                            <a href=""><img src="img/metal_lifting.jpg" alt="metal"></a>
+                            <img src="img/split.jpeg" alt="split">
                             <div class="img-text">
-                                <a href=""><h3>Heavy Metal</h3></a>
+                                <a href=""><h4>Split</h4></a>
                                 <a href=""><span>Subtitle</span></a>
                             </div>
                         </div>
                         <div class="col">
-                            <a href=""><img src="img/metal_lifting.jpg" alt="metal"></a>
+                            <img src="img/cure.jpeg" alt="a cure for wellness">
                             <div class="img-text">
-                                <a href=""><h3>Heavy Metal</h3></a>
+                                <a href=""><h4>A cure for wellness</h4></a>
                                 <a href=""><span>Subtitle</span></a>
                             </div>
                         </div>
                         <div class="col">
-                            <a href=""><img src="img/metal_lifting.jpg" alt="metal"></a>
+                            <img src="img/sinister.jpeg" alt="sinister">
                             <div class="img-text">
-                                <a href=""><h3>Heavy Metal</h3></a>
+                                <a href=""><h4>Sinister</h4></a>
                                 <a href=""><span>Subtitle</span></a>
                             </div>
                         </div>
                     </div>
                 </section>
                 <section id="for-john" class="pad20">
-
+                    <h2 class="mbot5">Creato Per John Doe</h2>
+                    <span>Più ascolti, PIù MEGLIO saranno i suggerimenti</span>
+                    <div class="flex-wrap mtop20">
+                        <div class="col">
+                            <img src="img/radar.jpeg" alt="release radar">
+                            <div class="img-text">
+                                <a href=""><h4>Release Radar</h4></a>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <img src="img/mixdaily.jpeg" alt="daily mix">
+                            <div class="img-text">
+                                <a href=""><h4>Daily Mix 1</h4></a>
+                            </div>
+                        </div>
+                    </div>
                 </section>
                 <section id="popular" class="pad20">
-
+                    <h2 class="mbot5">Artisti più popolari</h2>
+                    <span>Più ascolti, PIù MEGLIO saranno i suggerimenti</span>
+                    <div class="flex-wrap mtop20">
+                        <div class="col">
+                            <img src="img/youg.jpeg" alt="lana del rey">
+                            <div class="img-text">
+                                <a href=""><h4>Schiuppo Spanno</h4></a>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <img src="img/einaudi.jpeg" alt="einaudi">
+                            <div class="img-text">
+                                <a href=""><h4>Frata Ruggio</h4></a>
+                            </div>
+                        </div>
+                    </div>
                 </section>
             </main>
             <!-- /Main -->
