main, nav fixes

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <div class="page-container flex">
             <!-- Navbar -->
             <nav>
-                <div class="logo mar20">
-                    <img src="img/logo.svg" alt="logo">
-                    <img class="hidden" src="img/logo-small.svg" alt="logo">
+                <div class="logo pad20">
+                    <a href=""><img src="img/logo.svg" alt="logo"></a>
+                    <a href=""><img class="hidden" src="img/logo-small.svg" alt="logo"></a>
                 </div>
                 <div class="flex-column">
                     <!-- Radio Buttons -->
-                    <div class="radios">
+                    <div class="radios mtop20">
                         <div>
                             <input type="radio" id="home" name="section" checked>
                             <label for="home"><img src="img/home.svg" alt="home"><span>Home</span></label>
@@ -49,15 +49,15 @@
                     <div class="playlist pad20">
                         <h4>Playlist</h4>
                         <ul>
-                            <li><i class="fa-solid fa-plus"></i><span>Crea Playlist</span></li>
-                            <li><span>Nome Playlist</span></li>
-                            <li><span>Nome Playlist</span></li>
-                            <li><span>Nome Playlist</span></li>
-                            <li><span>Nome Playlist</span></li>
-                            <li><span>Nome Playlist</span></li>
-                            <li><span>Nome Playlist</span></li>
-                            <li><span>Nome Playlist</span></li>
-                            <li><span>Nome Playlist</span></li>
+                            <li><a href=""><i class="fa-solid fa-plus"></i><span>Crea Playlist</span></a></li>
+                            <li><a href=""><span>Nome Playlist</span></li></a>
+                            <li><a href=""><span>Nome Playlist</span></li></a>
+                            <li><a href=""><span>Nome Playlist</span></li></a>
+                            <li><a href=""><span>Nome Playlist</span></li></a>
+                            <li><a href=""><span>Nome Playlist</span></li></a>
+                            <li><a href=""><span>Nome Playlist</span></li></a>
+                            <li><a href=""><span>Nome Playlist</span></li></a>
+                            <li><a href=""><span>Nome Playlist</span></li></a>
                         </ul>
                     </div>
                     <!-- /Playlist -->
@@ -66,8 +66,8 @@
                         <a href=""><img class="dload" src="img/download.svg" alt=""><span>Installa app</span></a>
                         <hr>
                         <div class="user">
-                            <img src="img/profile.svg" alt="">
-                            <span>John Doe</span>                        
+                            <a href=""><img src="img/profile.svg" alt=""></a>
+                            <a href=""><span>John Doe</span></a>                     
                         </div>                        
                     </div>
                     <!-- /User -->
@@ -128,43 +128,43 @@
                         <div class="col">
                             <img src="img/metal_lifting.jpg" alt="metal">
                             <div class="img-text">
-                                <a href=""><h4>Heavy Metal</h4></a>
-                                <a href=""><span>Subtitle</span></a>
+                                <h4><a href="">Heavy Metal</a></h4>
+                                <span><a href="">Subtitle</a></span>
                             </div>
                         </div>
                         <div class="col">
                             <img src="img/stranger.jpeg" alt="stranger things">
                             <div class="img-text">
-                                <a href=""><h4>Stranger Things, Vol. 1(a Netflix Original Series Soundtrack)</h4></a>
-                                <a href=""><span>Subtitle</span></a>
+                                <h4><a href="">Stranger Things, Vol. 1(a Netflix Original Series Soundtrack)</a></h4>
+                                <span><a href="">Subtitle</a></span>
                             </div>
                         </div>
                         <div class="col">
                             <img src="img/aquietplace.jpeg" alt="a quiet place">
                             <div class="img-text">
-                                <a href=""><h4>A quiet place</h4></a>
-                                <a href=""><span>Subtitle</span></a>
+                                <h4><a href="">A quiet place</a></h4>
+                                <span><a href="">Subtitle</a></span>
                             </div>
                         </div>
                         <div class="col">
                             <img src="img/split.jpeg" alt="split">
                             <div class="img-text">
-                                <a href=""><h4>Split</h4></a>
-                                <a href=""><span>Subtitle</span></a>
+                                <h4><a href="">Split</a></h4>
+                                <span><a href="">Subtitle</a></span>
                             </div>
                         </div>
                         <div class="col">
                             <img src="img/cure.jpeg" alt="a cure for wellness">
                             <div class="img-text">
-                                <a href=""><h4>A cure for wellness</h4></a>
-                                <a href=""><span>Subtitle</span></a>
+                                <h4><a href="">A cure for wellness</a></h4>
+                                <span><a href="">Subtitle</a></span>
                             </div>
                         </div>
                         <div class="col">
                             <img src="img/sinister.jpeg" alt="sinister">
                             <div class="img-text">
-                                <a href=""><h4>Sinister</h4></a>
-                                <a href=""><span>Subtitle</span></a>
+                                <h4><a href="">Sinister</a></h4>
+                                <span><a href="">Subtitle</a></span>
                             </div>
                         </div>
                     </div>
@@ -176,13 +176,13 @@
                         <div class="col">
                             <img src="img/radar.jpeg" alt="release radar">
                             <div class="img-text">
-                                <a href=""><h4>Release Radar</h4></a>
+                                <h4><a href="">Release Radar</a></h4>
                             </div>
                         </div>
                         <div class="col">
                             <img src="img/mixdaily.jpeg" alt="daily mix">
                             <div class="img-text">
-                                <a href=""><h4>Daily Mix 1</h4></a>
+                                <h4><a href="">Daily Mix 1</a></h4>
                             </div>
                         </div>
                     </div>
@@ -194,13 +194,13 @@
                         <div class="col">
                             <img src="img/youg.jpeg" alt="lana del rey">
                             <div class="img-text">
-                                <a href=""><h4>Schiuppo Spanno</h4></a>
+                                <h4><a href="">Schiuppo Spanno</a></h4>
                             </div>
                         </div>
                         <div class="col">
                             <img src="img/einaudi.jpeg" alt="einaudi">
                             <div class="img-text">
-                                <a href=""><h4>Frata Ruggio</h4></a>
+                                <h4><a href="">Frata Ruggio</a></h4>
                             </div>
                         </div>
                     </div>
