footer player hovers

--- a/index.html
+++ b/index.html
@@ -226,8 +226,7 @@
                     <img src="img/player_left.jpg" alt="">
                     <div>
                         <h4><a href="">Hilltop Hoods</a></h4>
-                        <span><a href="">Brano</a></span>
-                        <span><a href="">Nome</a></span>
+                        <span><a href="">Brano Nome</a></span>
                     </div>
                     <div class="flex left-buttons">
                         <button><i class="fa-regular fa-heart"></i></button>
@@ -248,6 +247,7 @@
                         <span>0.25</span>
                         <div class="song-duration barra">
                             <div class="song-atm barra"></div>
+                            <div class="barra-circle"></div>
                         </div>
                         <span>4:35</span>
                     </div>
@@ -260,6 +260,7 @@
                     <button><i class="fa-solid fa-volume-high"></i></button>
                     <div class="volume-max barra">
                         <div class="volume-atm barra"></div>
+                        <div class="barra-circle"></div>
                     </div>
                 </div>
                 <!-- /Right Player -->
